--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 </head>
 <body>
     <h1>Coursera-test</h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque mollitia in est, eaque, excepturi aliquid amet consequuntur doloribus ipsa reprehenderit, consectetur esse iure minima ullam veritatis? Consequuntur maiores laboriosam dolore.</p>
+    <h1>Hello!!</h1>
 </body>
 </html>
